docs: updated index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+        <nav class="navbar">
+            <div class="navbar-header">DOTHRAKI's talk</div>
+        </nav>
+    <main>
+        <div>
+            <textarea id="txt-input">Please enter your text to convert it into DOTHRAKI</textarea>
+            <button>Translate</button>
+            <div>Translation will come here </div>
+            <textarea id="output"></textarea>
+        </div>
+    </main>
+    <footer>
+        <div>about</div>
+            <p>Convert from English to Dothraki. The Dothraki language is a constructed fictional language
+                in George R. R. Martin's fantasy novel series A Song of Ice and Fire and its television 
+                adaptation Game of Thrones, where it is spoken by the Dothraki, the indigenous inhabitants
+                of the Dothraki Sea. The language was developed for the TV series by the linguist David J.
+                Peterson based on the Dothraki words and phrases in Martin's novels.
+            </p>
+    </footer>
 
-
- <script href="app.js"></script>   
+    <script src="app.js" type="text/javascript"></script>   
 </body>
 </html>
