style: completed frontend

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
         <nav class="navbar">
-            <div class="navbar-header">DOTHRAKI's talk</div>
+            <div class="navbar-header">Dothraki's talk</div>
         </nav>
     <main>
         <div>
-            <textarea id="txt-input">Please enter your text to convert it into DOTHRAKI</textarea>
+            <textarea id="txt-input" placeholder="Please enter your text to convert it into Dothraki"></textarea>
             <button>Translate</button>
-            <div>Translation will come here </div>
+            <div>Translation will come here 👇 </div>
             <textarea id="output"></textarea>
         </div>
     </main>
     <footer>
-        <div>about</div>
+        <div class="footer-header">about it</div>
             <p>Convert from English to Dothraki. The Dothraki language is a constructed fictional language
                 in George R. R. Martin's fantasy novel series A Song of Ice and Fire and its television 
                 adaptation Game of Thrones, where it is spoken by the Dothraki, the indigenous inhabitants
