--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div>
             <textarea id="txt-input" placeholder="Please enter your text to convert it into Dothraki"></textarea>
-            <button>Translate</button>
+            <button id="btn-translate">Translate</button>
             <div>Translation will come here 👇 </div>
             <textarea id="output"></textarea>
         </div>
