style: new style

--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
 </head>
 <body>
         <nav class="navbar">
-            <div class="navbar-header">Dothraki's talk</div>
+            <div class="navbar-header">Dothraki's speak</div>
         </nav>
     <main>
         <div>
             <textarea id="txt-input" placeholder="Please enter your text to convert it into Dothraki"></textarea>
-            <button id="btn-translate">Translate</button>
-            <div>Translation will come here 👇 </div>
-            <textarea id="output"></textarea>
+            <button id="btn-translate">Translate to Dothraki</button>
+            <textarea id="output" placeholder="Translation will come here 👇"></textarea>
         </div>
     </main>
     <footer>
-        <div class="footer-header">about it</div>
-            <p>Convert from English to Dothraki. The Dothraki language is a constructed fictional language
+        <div class="footer-header">
+            <h3>about it</h3></div>
+            <p>The Dothraki language is a constructed fictional language
                 in George R. R. Martin's fantasy novel series A Song of Ice and Fire and its television 
                 adaptation Game of Thrones, where it is spoken by the Dothraki, the indigenous inhabitants
-                of the Dothraki Sea. The language was developed for the TV series by the linguist David J.
-                Peterson based on the Dothraki words and phrases in Martin's novels.
+                of the Dothraki Sea.
             </p>
     </footer>
 
